2003-10-23  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 04010] support for deprecated __ss_family
	* acinclude.m4 (AC_W3M_IPv6): check __ss_family
	* config.h.in: add HAVE_OLD_SS_FAMILY
	* ftp.c (ftp_pasv): ifdef HAVE_OLD_SS_FAMILY

2003-10-23  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 04009] ./configure --disable-image problem
	* file.c (loadHTMLstream): if defined(USE_M17N)

2003-10-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 04006] checking GC_version for libgc
	 reported by SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>
	* acinclude.m4 (AC_W3M_GC): check GC_init instead of GC_version

2003-10-21  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>

	* [w3m-dev 03996] HELP_DIR and funcname.tab
	* configure.in (HELP_DIR): don't eval 
	* scripts/w3mhelp.cgi: subst @prefix@ for $helpdir

2003-10-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* #include <openssl/...>
	 suggested by ABE Yuji <cbo46560@pop12.odn.ne.jp>
	 [w3m-dev 03998] problem about pkg-config check for OpenSSL
	* html.h: #include <openssl/...>
	* istream.c: ditto
	* istream.h: ditto
	* url.c: ditto

2003-10-20  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 04002] Re: function and w3m-control
	* url.c (getURLScheme): accept numeric in scheme

2003-10-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03996] HELP_DIR and funcname.tab
	  reported by SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>
	* configure.in: don't use posix shell syntax $(..)
	* funcname.tab: deleted

2003-10-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/Makefile.in (w3mhelp-funcname.pl): depends ../funcname.tab
	* Makefile.in (IMGOBJS): deleted
		(indep.o): depends on fm.h funcname1.h
		(IMGDISPLAY): depends on w3mimg/w3mimg.a
		(w3mimg/w3mimg.a): renamed from w3mimg
	* acinclude.m4 (AC_W3M_IMAGE): modify IMBOBJS 
	* w3mimg/Makefile.in (AR): added
			(RANLIB): added
			(IMGOBJS): added
			(w3mimg.a): added

2003-10-11  qhwt@myrealbox.com

	* [w3m-dev 03990] Re: post-m17n merge problem?